# lsconfig

./: CMakeLists.txt  install.sh  test.conf  uninstall.sh
include/ls/: Config.h
sample/: sample.cpp
src/ls/: Config.cpp  Config.h
